# spandas

./: CHANGELOG.md  LICENSE  README.md  constraints.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
spandas/: __init__.py  _tqdm_patch.py  compat.py  interop.py  spandas.py
spandas/enhanced/: __init__.py  apply_ext.py  join_ext.py  missing.py
spandas/enhanced/aggregation/: __init__.py  aggregation.py
spandas/enhanced/mathstats/: __init__.py  correlation.py  interpolation.py  timeseries.py
spandas/enhanced/plot/: plot.py
spandas/enhanced/plot_ext/: __init__.py  boxplot_ext.py  hist_ext.py  plot_ext.py
spandas/enhanced/reshape/: __init__.py  melting.py  pivoting.py  reshaping.py
spandas/enhanced/selection/: __init__.py  filter_mask.py  indexing.py  slicing.py
spandas/original/: backup.py
tests/: conftest.py  test_apply_progress.py  test_dask_basic.py  test_join_ext.py  test_no_dask_swifter.py  test_public_api.py  test_selection.py  test_smoke.py  test_tqdm_progress.py
