[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spandas"
version = "0.1.1"
description = "Spark + pandas hybrid utilities"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [{ name = "Zeusu Sato" }]
urls = { "Homepage" = "https://github.com/zeusu-sato/spandas" }

dependencies = [
  "pandas>=1.5,<2.0",
  "numpy>=1.22,<2.0",
  "pyarrow>=8,<13",
  "matplotlib>=3.7,<3.8",
]

[project.optional-dependencies]
perf = ["tqdm>=4.33,<5"]

[tool.setuptools]
packages = ["spandas"]
